--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -38,6 +38,8 @@
       gtag('config', 'UA-58927609-6');
     </script>
 
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
+
   </head>
 
   <body>
