--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <base href="/">
 
-    <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1, user-scalable=no, viewport-fit=cover' />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no, viewport-fit=cover"/>
 
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">        
 
@@ -25,17 +25,20 @@
     <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
   <body>
 
     <app-root></app-root>
     
-  </body>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+</body>
 
 </html>
