--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -40,6 +40,8 @@
 
     <!--<script type="text/javascript" src="cordova.js"></script>-->
 
+    <!--window.open = cordova.InAppBrowser.open;-->
+
   </head>
 
   <body>
