--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -48,6 +48,7 @@
 
       function onDeviceReady() {
         window.open = cordova.InAppBrowser.open;
+        var permissions = cordova.plugins.permissions;
       }
 
     </script>
