--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,11 @@
 
     <meta name="theme-color" content="#1976d2">
 
+    <script>
+      var cordova = undefined
+      var device = undefined
+    </script>
+
 </head>
 
   <body>
