--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -37,6 +37,12 @@
 
       gtag('config', 'UA-58927609-6');
     </script>
+    
+    <script>
+      var cordova = undefined
+    </script>
+
+    <!--
 
     <script type="text/javascript" src="cordova.js"></script>
     
@@ -52,6 +58,8 @@
       }
 
     </script>
+
+    -->
 
   </head>
 
