--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     
-    <title>Spotbie - The World Is Yours</title>
+    <title>SpotBie - The World Is Yours</title>
 
     <base href="/">
 
@@ -31,11 +31,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 
     <meta name="theme-color" content="#1976d2">
-
-    <script>
-      var cordova = undefined
-      var device = undefined
-    </script>
 
 </head>
 
