--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -38,7 +38,12 @@
       gtag('config', 'UA-58927609-6');
     </script>
 
-    <script type="text/javascript" src="cordova.js"></script>
+    <script>
+      var device = undefined
+      var cordova = undefined
+    </script>
+
+    <!--<script type="text/javascript" src="cordova.js"></script>
     
     <script>
       
@@ -52,7 +57,7 @@
         //var permissions = cordova.plugins.permissions;//comment this out on ios
       }
 
-    </script>
+    </script>-->
 
   </head>
 
