--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -38,26 +38,11 @@
       gtag('config', 'UA-58927609-6');
     </script>
 
+    <!-- comment this out for cordova -->
     <script>
       var device = undefined
       var cordova = undefined
     </script>
-
-    <!--<script type="text/javascript" src="cordova.js"></script>
-    
-    <script>
-      
-      localStorage.setItem('isCordova', '1');
-
-      document.addEventListener("deviceready", onDeviceReady, false);
-
-      function onDeviceReady() {
-        window.open = cordova.InAppBrowser.open;
-        window.open('https://spotbie.com/home?entry=cordova', '_self')
-        //var permissions = cordova.plugins.permissions;//comment this out on ios
-      }
-
-    </script>-->
 
   </head>
 
