--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     
-    <title>SpotBie - The World Is Yours</title>
+    <title>SpotBie - Connecting users, places to eat, shopping, and events.</title>
 
     <base href="/">
 
@@ -46,6 +46,9 @@
     <app-root></app-root>
     
     <noscript>Please enable JavaScript to continue using this application.</noscript>
+
+    <!--<script src="//code.tidio.co/yfvyowbn5nbd3x5kmo5z0f2kdug4oszw.js" async></script>-->
+
 </body>
 
 </html>
