Ad Fixes & More

--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -42,7 +42,7 @@
 
     <app-root></app-root>
     
-    <!--<script src="//code.tidio.co/yfvyowbn5nbd3x5kmo5z0f2kdug4oszw.js" async></script>-->
+    <script src="//code.tidio.co/yfvyowbn5nbd3x5kmo5z0f2kdug4oszw.js" async></script>
 
   </body>
 
