--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -26,6 +26,7 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58927609-6"></script>
+    
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -40,6 +41,8 @@
 
     <app-root></app-root>
     
+    <script src="//code.tidio.co/yfvyowbn5nbd3x5kmo5z0f2kdug4oszw.js" async></script>
+
   </body>
 
 </html>
