--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -26,7 +26,7 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58927609-6"></script>
-    
+    <meta name="google-site-verification" content="nRbVeTjACf4xKSY5EqMWdFChhIsQzFSa3Jtjj8H2yu8" />
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
