--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -22,6 +22,13 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58927609-6"></script>
     <meta name="google-site-verification" content="nRbVeTjACf4xKSY5EqMWdFChhIsQzFSa3Jtjj8H2yu8" />
+
+    <script>
+      window.TransformStream = null;
+      window.WritableStream = null;
+      window.ReadableStream = null;
+    </script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
