--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>SpotBie | It's On Us.</title>
+    <title>SpotBie | Loyalty Points</title>
 
     <base href="/">
     <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1, user-scalable=no, viewport-fit=cover' />
