CHANGED: Wording, styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
 
-    <title>SpotBie | Loyalty Points</title>
+    <title>SpotBie | Growth Assistant</title>
 
     <base href="/">
 
@@ -30,7 +30,6 @@
     <meta name="theme-color" content="#1976d2">
 
     <script>
-      var cordova = undefined
       var device = undefined
     </script>
 
