--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>SpotBie | Loyalty Points</title>
+    <title>SpotBie | Growth Assistant</title>
 
     <base href="/">
     <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1, user-scalable=no, viewport-fit=cover' />
@@ -36,6 +36,5 @@
 
   <body>
     <app-root></app-root>
-    <script src="//code.tidio.co/yfvyowbn5nbd3x5kmo5z0f2kdug4oszw.js" async></script>
   </body>
 </html>
